bijna klaar met agreement
alleen nog bobaljik met icelandic!

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -256,6 +256,17 @@
   pages = {331-374}
 }
 
+@misc{steel1978,
+  title={Word order variation: A typological study},
+  author={Steel, Susan},
+  year={1978},
+  publisher={Stanford University Press},
+  address = {Stanford},
+  editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
+  booktitle = {Universals of Human Language: IV: Syntax},
+  pages = {585-623}
+}
+
 @incollection{bobaljik2006,
   title = {Where's Φ? Agreement as a Post-Syntactic Operation},
   booktitle = {Phi-Theory: Phi Features Across Interfaces and Modules},
