--- a/tables/gothic-grammaticality.tex
+++ b/tables/gothic-grammaticality.tex
@@ -1,4 +1,4 @@
-% !TEX root = thesis.tex
+% !TEX root = ../thesis.tex
 
 \begin{tabular}{c|c|c|c}
   \toprule
@@ -8,19 +8,19 @@
         & [\ac{dat}]
         \\ \cmidrule{1-4}
     [\ac{nom}]
-        & \colorbox{DG}{\ac{nom}}
+        & \ac{nom}
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
         \\ \cmidrule{1-4}
     [\ac{acc}]
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{acc}}}{*\ac{nom}}
-        & \colorbox{DG}{\ac{acc}}
+        & \ac{acc}
         & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{LG}{\ac{dat}}}
         \\ \cmidrule{1-4}
     [\ac{dat}]
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{nom}}
         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{acc}}
-        & \colorbox{DG}{\ac{dat}}
+        & \ac{dat}
         \\
   \bottomrule
 \end{tabular}
